# beeai_app

./: .dockerignore  .env  Dockerfile  README.md  README_RU.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
beeai_app/: asgi.py  settings.py  urls.py  wsgi.py
jservice/: models.py  serializers.py  urls.py  views.py
jservice/migrations/: 0001_initial.py  0002_rename_question_created_at_randomquestion_created_at_and_more.py  0003_alter_randomquestion_question_id.py
